--- a/PostProcess.html
+++ b/PostProcess.html
@@ -34,9 +34,10 @@ void main()
 
 </script>
 
-<script type="text/javascript" src="../Common/webgl-utils.js"></script>
-<script type="text/javascript" src="../Common/initShaders.js"></script>
-<script type="text/javascript" src="../Common/MV.js"></script>
+<script type="text/javascript" src="Common/webgl-utils.js"></script>
+<script type="text/javascript" src="Common/initShaders.js"></script>
+<script type="text/javascript" src="Common/MV.js"></script>
+<script type="text/javascript" src="heatmap.js"></script>
 <script type="text/javascript" src="PostProcess.js"></script>
 
 </head>
